feat: Initial project setup with basic UI and navigation
- Added .gitignore, basic Gradle configuration, and project structure.
- Implemented initial UI screens:
    - Username and role selection screen (SignBuddyUsernameScreen)
    - Student dashboard with Home, Lessons, and Profile tabs (StudentDashboard)
    - Basic screens for Achievements, Leaderboard, Tutorial, and Progress.
    - Login screens for Teacher and Admin roles.
- Set up navigation between screens using NavHost.
- Added basic theme, colors, typography, and shapes.
- Included placeholder images for sign language letters (A-Z).
- Added necessary permissions for camera usage in AndroidManifest.xml.
- Included initial unit and instrumented tests.
- Added launcher icons and basic resource files.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.signbuddy">
     <uses-feature android:name="android.hardware.camera.any"/>
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <!-- Add this: explicitly state that the camera is optional -->
     <uses-feature android:name="android.hardware.camera" android:required="true" />
